--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pageBg{
+  background: linear-gradient(45deg, transparent 0%, transparent 51%, rgba(130, 130, 130, 0.05) 51%, rgba(130, 130, 130, 0.05) 71%, transparent 71%, transparent 100%), linear-gradient(0deg, transparent 0%, transparent 69%, rgba(130, 130, 130, 0.05) 69%, rgba(130, 130, 130, 0.05) 84%, transparent 84%, transparent 100%), linear-gradient(135deg, transparent 0%, transparent 37%, rgba(130, 130, 130, 0.05) 37%, rgba(130, 130, 130, 0.05) 73%, transparent 73%, transparent 100%), linear-gradient(90deg, rgb(255, 255, 255), rgb(255, 255, 255));
 }
